[package]
name = "expression_engine"
version = "0.5.0"
edition = "2021"
description = "An expression engine written in pure rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.26.1"
once_cell = "1.17.1"
