[package]
name = "expression_engine"
version = "0.7.0"
edition = "2021"
description = "An expression engine written in pure rust"
license = "Apache-2.0"
homepage = "https://github.com/ashyanSpada/expression_engine_rs"
keywords = [
    "rule-engine",
    "expression-engine",
    "math-engine",
    "expressionengine", 
    "ruleengine"
]
repository = "https://github.com/ashyanSpada/expression_engine_rs"
documentation = "https://docs.rs/expression_engine/latest/expression_engine/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.31.0"
once_cell = "1.18.0"

[dev-dependencies]
rstest = "0.18.2"
criterion = {version="0.5.1", features=["html_reports"]}

[[bench]]
name = "execute_expression"
harness = false

[[bench]]
name = "display_expression"
harness = false
